--- a/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
@@ -63,15 +63,15 @@
                                                 <div class="accordion-body">
                                                     <div class="form-check">
                                                         <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="台灣">
-                                                        <label id="c1" value="台灣">台灣</label>(<span></span>)
+                                                        <label value="台灣">台灣</label>(<span id="c1"></span>)
                                                     </div>
                                                     <div class="form-check">
                                                         <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="韓國">
-                                                        <label id="c2" value="韓國">韓國</label>(<span></span>)
+                                                        <label value="韓國">韓國</label>(<span id="c2"></span>)
                                                     </div>
                                                     <div class="form-check">
                                                         <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="日本">
-                                                        <label id="c3" value="日本">日本</label>(<span></span>)
+                                                        <label value="日本">日本</label>(<span id="c3"></span>)
                                                     </div>
                                                 </div>
                                             </div>
@@ -79,14 +79,14 @@
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                                                 <button class="accordion-button collapsed accordion-btn" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                                                    東南亞(<span></span>)
+                                                    東南亞(<span id="cc2"></span>)
                                                 </button>
                                             </h2>
                                             <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                                                 <div class="accordion-body">
                                                     <div class="form-check">
                                                         <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="越南" id="flexCheckDefault">
-                                                        <label id="c4" value="越南">越南</label>(<span></span>)
+                                                        <label value="越南">越南</label>(<span id="c4"></span>)
                                                     </div>
                                                 </div>
                                             </div>
@@ -94,41 +94,14 @@
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                                                 <button class="accordion-button collapsed accordion-btn" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                                                    北美洲(<span></span>)
+                                                    北美洲(<span id="cc3"></span>)
                                                 </button>
                                             </h2>
                                             <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                                                 <div class="accordion-body">
                                                     <div class="form-check">
                                                         <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="美國" id="flexCheckDefault">
-                                                        <label id="c5" value="美國">美國</label>(<span></span>)
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="panelsStayOpen-headingFour">
-                                                <button class="accordion-button collapsed accordion-btn" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-                                                    北歐(<span></span>)
-                                                </button>
-                                            </h2>
-                                            <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
-                                                <div class="accordion-body">
-                                                    <div class="form-check">
-                                                        <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="冰島" id="flexCheckDefault">
-                                                        <label id="c6" value="冰島">冰島</label>(<span></span>)
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="芬蘭" id="flexCheckDefault">
-                                                        <label id="c7" value="芬蘭">芬蘭</label>(<span></span>)
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="挪威" id="flexCheckDefault" disabled>
-                                                        <label>挪威</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault">
-                                                        <label>丹麥</label>
+                                                        <label value="美國">美國</label>(<span id="c5"></span>)
                                                     </div>
                                                 </div>
                                             </div>
@@ -136,50 +109,19 @@
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" id="panelsStayOpen-headingFive">
                                                 <button class="accordion-button collapsed accordion-btn" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
-                                                    西歐(<span></span>)
+                                                    歐洲(<span id="cc4"></span>)
                                                 </button>
                                             </h2>
                                             <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
                                                 <div class="accordion-body">
                                                     <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault">
-                                                        <label>英國</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault">
-                                                        <label>法國</label>
+                                                        <input class="form-check-input dfhue disabled" type="checkbox" name="info[]" value="" id="flexCheckDefault" disabled>
+                                                        <label class="dfhue disabled">英國</label>(<span id="c6"></span>)
                                                     </div>
                                                     <div class="form-check">
                                                         <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault" disabled>
-                                                        <label>荷蘭</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault" disabled>
-                                                        <label>愛爾蘭</label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="panelsStayOpen-headingSix">
-                                                <button class="accordion-button collapsed accordion-btn" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false" aria-controls="panelsStayOpen-collapseSix">
-                                                    中歐(<span></span>)
-                                                </button>
-                                            </h2>
-                                            <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingSix">
-                                                <div class="accordion-body">
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault">
-                                                        <label>德國</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault" disabled>
-                                                        <label>奧地利</label>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault">
-                                                        <label>瑞士</label>
-                                                    </div>
+                                                        <label class="dfhue disabled">法國</label>(<span id="c7"></span>)
+                                                    </div>                                                  
                                                 </div>
                                             </div>
                                         </div>
@@ -220,12 +162,8 @@
                                         <button style="width:4%;padding:1%" type="button" id="showw">確定</button>
                                         <select class="form-select djfdd" id="productid" aria-label="Default select example">
                                             <option selected>選擇方案</option>
-                                            <option value="1">單人旅行</option>
-                                            <option value="2">雙人旅行</option>
-                                            <option value="3">三人旅行</option>
-                                            <option value="4">家庭旅遊</option>
-                                            <option value="5">美食</option>
-                                            <option value="6">活動展覽</option>
+                                            <option value="1">1日遊</option>     
+                                            <option value="2">多日遊</option>                                          
                                         </select>
 
                                         <div class="d-flex justify-content-end" @*style="border:1px red solid"*@>
@@ -318,22 +256,7 @@
 
     @section Scripts{
         <script>
-            @*function QQ() {
-                $.get("@Url.Action("getcount", "ProductListPage2")",
-                    function (data) {                   
-                        $(`#c${1}`).next().text(5)
-                        for (let i of data) {
-                            for (let q = 1; q <=7 ; q++) {
-                                var s = $(`#c${q}`)
-                                var sb = $(`#c${q}`).next()
-                                if (i.coutryname == s.html())
-                                    sb.text(i.count)
 
-                            }
-                        }
-                    }
-                )
-            }*@
 
 
         $("#showw").click(function () {
@@ -419,20 +342,102 @@
                 })
 
             })
-
+             @*function QQ() {
+                $.get("@Url.Action("getcount", "ProductListPage2")",
+                    function (data) {
+                        $(`#c${1}`).next().text(5)
+                        for (let i of data) {
+                            for (let q = 1; q <= 7; q++) {
+                                var s = $(`#c${q}`)
+                                var sb = $(`#c${q}`).next()
+                                if (i.coutryname == s.html())
+                                    sb.text(i.count)
+                            }
+                        }
+                    }
+                )
+            }*@
             $("#btn").click(function () {
                 var qq = $("#text").val()
                 var url = "@Url.Content("~/ProductListPage2/filter")"
                 var name = `?keyword=` + qq
                 $("#ans").load(url + name)
-                $.getJSON("/ProductListPage2/getSearchCountt", { keyword: qq }, function (data) {
+                $.getJSON("/ProductListPage2/getSearchCounty", { keyword: qq }, function (data) {
                     $("#cc1").html("");
                     $("#cc1").html(data);
                 })
-
+            })
+             $("#btn").click(function () {
+                var qq = $("#text").val()
+                var url = "@Url.Content("~/ProductListPage2/filter")"
+                var name = `?keyword=` + qq
+                $("#ans").load(url + name)
+                $.getJSON("/ProductListPage2/getSearchCountyt", { keyword: qq }, function (data) {
+                    $("#c1").html("");
+                    $("#c1").html(data);
+                })
+            })
+             $("#btn").click(function () {
+                var qq = $("#text").val()
+                var url = "@Url.Content("~/ProductListPage2/filter")"
+                var name = `?keyword=` + qq
+                $("#ans").load(url + name)
+                $.getJSON("/ProductListPage2/getSearchCountyk", { keyword: qq }, function (data) {
+                    $("#c2").html("");
+                    $("#c2").html(data);
+                })
+            })
+             $("#btn").click(function () {
+                var qq = $("#text").val()
+                var url = "@Url.Content("~/ProductListPage2/filter")"
+                var name = `?keyword=` + qq
+                $("#ans").load(url + name)
+                $.getJSON("/ProductListPage2/getSearchCountyj", { keyword: qq }, function (data) {
+                    $("#c3").html("");
+                    $("#c3").html(data);
+                })
+            })
+              $("#btn").click(function () {
+                var qq = $("#text").val()
+                var url = "@Url.Content("~/ProductListPage2/filter")"
+                var name = `?keyword=` + qq
+                $("#ans").load(url + name)
+                $.getJSON("/ProductListPage2/getSearchCountd", { keyword: qq }, function (data) {
+                    $("#cc2").html("");
+                    $("#cc2").html(data);
+                    $("#c4").html("");
+                    $("#c4").html(data);
+                })
             })
 
+              $("#btn").click(function () {
+                var qq = $("#text").val()
+                var url = "@Url.Content("~/ProductListPage2/filter")"
+                var name = `?keyword=` + qq
+                $("#ans").load(url + name)
+                $.getJSON("/ProductListPage2/getSearchCountb", { keyword: qq }, function (data) {
+                    $("#cc3").html("");
+                    $("#cc3").html(data);
+                    $("#c5").html("");
+                    $("#c5").html(data);
+                })
 
+            })
+             $("#btn").click(function () {
+                var qq = $("#text").val()
+                var url = "@Url.Content("~/ProductListPage2/filter")"
+                var name = `?keyword=` + qq
+                $("#ans").load(url + name)
+                $.getJSON("/ProductListPage2/getSearchCounto", { keyword: qq }, function (data) {
+                    $("#cc4").html("");
+                    $("#cc4").html(data);
+                    $("#c6").html("");
+                    $("#c6").html(data);
+                    $("#c7").html("");
+                    $("#c7").html(data);
+                })
+
+            })
 
 
             $(function () {
