--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
           crossorigin="anonymous" />
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-
+    <link href="~/css/chatroom.css" rel="stylesheet" />
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
@@ -30,6 +30,47 @@
             <iframe id="AzureBot" src='https://webchat.botframework.com/embed/msit143-planet-textanalytics-bot?s=m1ntiqmJxoE.U_callpLQRu2tMROH-FF27lCvT0iNyNUW5-5j_Orkk8' style='min-width: 400px; width: 100%; min-height: 500px;display:none'></iframe>
         </div>
     </div>
+
+
+    @*聊天室*@
+<div class="d-flex chatroomShow">
+    <div style="width:75px">
+        <img src="@Url.Content("~/Images/聊天室icon.png")" onclick="showChatRoom()" style="width:100%" />
+    </div>
+    <div class="chatroomBorder">
+        <div class="chatbox">
+            <div style="display:none">
+                <label>你的ID</label>
+                <label id="yourID"></label>
+            </div>
+
+            <div class="d-flex justify-content-center chatbar">
+                <div>
+                    <div class="d-flex justify-content-center wellcomeP ">
+                        <p id="wellcomeP">星球旅遊即時通訊</p>
+                    </div>
+                    <div class="chatroom2" id="chatroom2">
+
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center">
+                <div id="AinputBlock2">
+                    <input id="AclientInput" /><button id="Aclick" onclick="Aclient()">send</button>
+                </div>
+            </div>
+            <div>
+                <button id="chatDemoBtn1" onclick="chatDemoBtn1()" class="btn btn-info ms-4 mb-2">DEMO1</button>
+                <button id="chatDemoBtn2" onclick="chatDemoBtn2()" class="btn btn-info ms-4 mb-2">DEMO2</button>
+                <button id="chatDemoBtn3" onclick="chatDemoBtn3()" class="btn btn-info ms-4 mb-2">DEMO3</button>
+                <button id="chatDemoBtn4" onclick="chatDemoBtn4()" class="btn btn-info ms-4 mb-2">DEMO4</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
     <header class="main-header">
         <div class="container">
             <a href="@Url.Content("~/Home/Index")" class="logo">
@@ -287,8 +328,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
           media="screen" />
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script> <!--註冊驗證-->
-
-
+    <script src="~/js/signalr/dist/browser/signalr.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/jquery.unobtrusive-ajax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -297,7 +337,7 @@
     <script src="https://cdn.jsdelivr.net/npm/&#64;popperjs/core@2.11.6/dist/umd/popper.min.js"
             integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
             crossorigin="anonymous"></script>
-
+    <script src="~/js/chatroom.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
