--- a/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
+++ b/MIST143_Traveler/Views/Shopping/PayCheckout.cshtml
@@ -52,6 +52,7 @@
             <input type="hidden" asp-for="_CPayViewModel[i].TravelProductName" value="@Model._CShoppingCartDetailViewModel[i].TravelProductName" />
             <input type="hidden" asp-for="_CPayViewModel[i].Count" value="@Model._CShoppingCartDetailViewModel[i].Count" />
             <input type="hidden" asp-for="_CPayViewModel[i].Price" value="@Model._CShoppingCartDetailViewModel[i].Price" />
+            <input type="hidden" asp-for="_CPayViewModel[i].AccompanyPeople" value="@Model._CShoppingCartDetailViewModel[i].AccompanyPeople" />
         }
         <div class="payContainerInner">
             <div>
